static/Reliability/200_Backup_Restore_Failback_Analytics/Code/cfn/dr-infra.yaml
# Copyright 2021 Amazon.com, Inc. or its affiliates. All Rights Reserved.
# 
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# A copy of the License is located at
# 
#     https://www.apache.org/licenses/LICENSE-2.0
# 
# or in the "license" file accompanying this file. This file is distributed 
# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
# express or implied. See the License for the specific language governing 
# permissions and limitations under the License.

AWSTemplateFormatVersion: '2010-09-09'
Description: 'Infrastructure for backup/restore strategy for an analytics workload'
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: General
        Parameters:
          - ProjectName
          - BackupBucket 
      - Label:
          default: Networking
        Parameters:
          - vpccidr
          - AppPublicCIDRA
          - AppPrivateCIDRA
          - AppPrivateCIDRB
          - AppPrivateCIDRC
          - AppPrivateCIDRD
          - AllowedPrefixIngress
          - AllowedCidrIngress
      - Label:
          default: Kinesis Configuration
        Parameters:
          - RawShardCount
Parameters:
  ProjectName:
    Description: Tagging identifier
    Type: String
    Default: "BackupRestoreAnalytics"
  RawShardCount:
    Description: Shard count for raw input stream
    Type: Number
    Default: 1
  vpccidr:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/16
    Default: 10.20.0.0/16
  AppPublicCIDRA:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
    Default: 10.20.1.0/24
  AppPrivateCIDRA:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
    Default: 10.20.3.0/24
  AppPrivateCIDRB:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
    Default: 10.20.4.0/24
  AppPrivateCIDRC:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
    Default: 10.20.5.0/24
  AppPrivateCIDRD:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
    Default: 10.20.6.0/24
  AllowedPrefixIngress:
    Description: Prefix for allowed inbound traffic
    Type: String
  AllowedCidrIngress:
    Type: String
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/22
  BackupBucket:
    Description: S3 bucket for storage
    Type: String
  
Resources:
  RawStream: 
    Type: AWS::Kinesis::Stream 
    Properties: 
      Name: !Join ['_', [!Ref ProjectName, 'RawStream']]
      ShardCount: !Ref RawShardCount
      Tags: 
        - Key: "Project"
          Value: !Ref ProjectName

  IngestFnRole:
    Type: "AWS::IAM::Role"
    Properties: 
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "lambda.amazonaws.com"
            Action:
                - "sts:AssumeRole"
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
      Policies:
        -
          PolicyName: lambda_kinesis
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              -
                Effect: Allow
                Action: kinesis:PutRecord
                Resource: !GetAtt RawStream.Arn
              -
                Effect: Allow
                Action: kinesis:PutRecords
                Resource: !GetAtt RawStream.Arn
              -
                Effect: Allow
                Action: kinesis:DescribeStream
                Resource: !GetAtt RawStream.Arn

  IngestFn:
    Type: AWS::Lambda::Function
    Properties:
      Description: Accept incoming messages and relay to a Kinesis stream
      Runtime: python3.7
      Role: !GetAtt IngestFnRole.Arn
      Handler: index.handler
      Environment:
        Variables:
          StreamName: !Ref RawStream
      Timeout: 10
      Tags:
        - Key: Project
          Value: !Ref ProjectName
        - Key: Name
          Value: !Join ["", [!Ref ProjectName, "-IngestFn"]]
      Code:
        ZipFile: |
          import boto3
          import os
          import time
          import json
          import base64

          kinesis = boto3.client('kinesis')
          stream = os.environ['StreamName']
          pkey = str(int(time.time()))

          def handler(event, context):
            print('Received event: ' + str(event))
            record = event['body']
            decodedBytes = base64.b64decode(record)
            decodedStr = str(decodedBytes, "utf-8")

            scode = 200
            sdesc = "200 OK"
            try:
              kinesis.put_record(
                  StreamName=stream,
                  Data=decodedStr + "\n",
                  PartitionKey=pkey)
            except Exception as e:
              print("Failed writing to Kinesis")
              scode = 400
              sdesc = "400 Failed"

            return {
                "isBase64Encoded": False,
                "statusCode": scode,
                "statusDescription": sdesc,
                "body": sdesc
            }

  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref vpccidr
      EnableDnsHostnames: 'true'
      EnableDnsSupport: 'true'
      Tags:
        -
          Key: Project
          Value: !Ref ProjectName
        -
          Key: Name
          Value: !Join ["", [!Ref ProjectName, "-VPC"]]

  IGW:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        -
          Key: Project
          Value: !Ref ProjectName
        -
          Key: Name
          Value: !Join ["", [!Ref ProjectName, "-IGW"]]
  GatewayAttach:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC
  
  SubnetPublicA: 
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ]
      CidrBlock: !Ref AppPublicCIDRA
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
  SubnetRouteTableAssociatePublicA: 
    DependsOn: SubnetPublicA
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref RouteTablePublic
      SubnetId: !Ref SubnetPublicA
  RouteDefaultPublic:
    Type: "AWS::EC2::Route"
    DependsOn: GatewayAttach
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref RouteTablePublic
  RouteTablePublic:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
  EIPNatGWA:
    DependsOn: GatewayAttach
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc
  NatGatewayA:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt EIPNatGWA.AllocationId
      SubnetId: !Ref SubnetPublicA
  RouteTablePrivateA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: Project
          Value: !Ref ProjectName
        -
          Key: Name
          Value: !Join ["", [!Ref ProjectName, "-RT-PrivateA"]]
  PrivateSubnetRouteTableAssociationA:
    DependsOn: SubnetPrivateA
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPrivateA
      RouteTableId: !Ref RouteTablePrivateA
  RouteDefaultPrivateA:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA
      RouteTableId: !Ref RouteTablePrivateA
  SubnetPrivateA:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ]
      CidrBlock: !Ref AppPrivateCIDRA
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      Tags:
        -
          Key: Project
          Value: !Ref ProjectName
        -
          Key: Name
          Value: !Join ["", [!Ref ProjectName, "-Subnet-PrivateA"]]
  SubnetPrivateB:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ]
      CidrBlock: !Ref AppPrivateCIDRB
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      Tags:
        -
          Key: Project
          Value: !Ref ProjectName
        -
          Key: Name
          Value: !Join ["", [!Ref ProjectName, "-Subnet-PrivateB"]]
  SubnetPrivateC:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [2, !GetAZs ]
      CidrBlock: !Ref AppPrivateCIDRC
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      Tags:
        -
          Key: Project
          Value: !Ref ProjectName
        -
          Key: Name
          Value: !Join ["", [!Ref ProjectName, "-Subnet-PrivateC"]]
  SubnetPrivateD:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ]
      CidrBlock: !Ref AppPrivateCIDRD
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      Tags:
        -
          Key: Project
          Value: !Ref ProjectName
        -
          Key: Name
          Value: !Join ["", [!Ref ProjectName, "-Subnet-PrivateD"]]

  LbSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "ALB Security Group"
      SecurityGroupIngress:
        - SourcePrefixListId: !Ref AllowedPrefixIngress
          IpProtocol: "TCP"
          FromPort: 80
          ToPort: 80
        - CidrIp: !Ref AllowedCidrIngress
          IpProtocol: "TCP"
          FromPort: 80
          ToPort: 80
      VpcId: !Ref VPC
  AlbForLambda:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      Scheme: internal
      Subnets: 
        - !Ref SubnetPrivateD
        - !Ref SubnetPrivateB
        - !Ref SubnetPrivateC
      SecurityGroups:
        - !Ref LbSecurityGroup
      Tags: 
        - Key: Project
          Value: !Ref ProjectName
        - Key: Name
          Value: !Join ["", [!Ref ProjectName, "-Alb"]]
      Type: application

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref AlbForLambda
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  ListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref LoadBalancerListener
      Priority: 1
      Conditions:
        - Field: path-pattern
          Values:
            - /
      Actions:
        - TargetGroupArn: !Ref TargetGroup
          Type: forward

  AlbLambdaInvokePermission:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !GetAtt 
        - IngestFn
        - Arn
      Action: 'lambda:InvokeFunction'
      Principal: elasticloadbalancing.amazonaws.com
      
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: 
      - AlbForLambda
      - AlbLambdaInvokePermission
    Properties:
      HealthCheckEnabled: false
      Name: AlbLambdaTg
      TargetType: lambda
      Targets:
      - Id: !GetAtt [ IngestFn, Arn ]
      Tags: 
        - Key: Project
          Value: !Ref ProjectName
        - Key: Name
          Value: !Join ["", [!Ref ProjectName, "-AlbTg"]]

  RawFhRole:
    Type: "AWS::IAM::Role"
    Properties: 
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "firehose.amazonaws.com"
            Action:
                - "sts:AssumeRole"
      ManagedPolicyArns: 
        - "arn:aws:iam::aws:policy/CloudWatchLogsFullAccess"
      Policies:
        -
          PolicyName: raw_fh
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              -
                Effect: Allow
                Action: 
                  - "s3:AbortMultipartUpload"
                  - "s3:GetBucketLocation"
                  - "s3:GetObject"
                  - "s3:ListBucket"
                  - "s3:ListBucketMultipartUploads"
                  - "s3:PutObject"
                Resource: 
                  - !Join ["", ["arn:aws:s3:::", !Ref BackupBucket]]
                  - !Join ["", ["arn:aws:s3:::", !Ref BackupBucket, "/*"]]
              - 
                Effect: Allow
                Action:
                  - "kinesis:DescribeStream"
                  - "kinesis:GetShardIterator"
                  - "kinesis:GetRecords"
                  - "kinesis:ListShards"
                Resource: !GetAtt RawStream.Arn

  RawFh:
    Type: AWS::KinesisFirehose::DeliveryStream
    Properties: 
      DeliveryStreamType: KinesisStreamAsSource
      KinesisStreamSourceConfiguration: 
        KinesisStreamARN: !GetAtt RawStream.Arn
        RoleARN: !GetAtt RawFhRole.Arn
      S3DestinationConfiguration: 
        BucketARN: !Join ["", ["arn:aws:s3:::", !Ref BackupBucket]]
        Prefix: "raw/"
        RoleARN: !GetAtt RawFhRole.Arn
      Tags: 
        - Key: Project
          Value: !Ref ProjectName
        - Key: Name
          Value: !Join ["", [!Ref ProjectName, "-Rawfh"]]

  CompactionJob:
    Type: AWS::Glue::Job
    Properties:
      Command:
        Name: glueetl
        ScriptLocation: !Join ["", ["s3://", !Ref BackupBucket, "/code/compaction.py"]]
      MaxRetries: 0
      MaxCapacity: 10
      GlueVersion: "2.0"
      Name: CompactNightly
      Role: !Ref CompactionJobRole

  CompactionJobRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "glue.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
      ManagedPolicyArns: 
        - "arn:aws:iam::aws:policy/service-role/AWSGlueServiceRole"
      Policies:
        -
          PolicyName: "glue-job-s3"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              -
                Effect: "Allow"
                Action: "s3:*"
                Resource: 
                  - !Join ["", ["arn:aws:s3:::", !Ref BackupBucket]]
                  - !Join ["", ["arn:aws:s3:::", !Ref BackupBucket, "/*"]]
  

Outputs:
  VcpId:
    Description: VPC ID
    Value: !Ref VPC
  AlbArn:
    Description: Endpoint Arn
    Value: !Ref AlbForLambda
